# usubot

./: .gitignore  README.md  bot-components.opam  dune-project  usubot.opam
bot-components/: Bot_info.ml  Bot_info.mli  Bot_infos.ml  Bot_infos.mli  Config.ml  GitHub_app.ml  GitHub_app.mli  GitHub_installations.ml  GitHub_mutations.ml  GitHub_mutations.mli  GitHub_queries.ml  GitHub_queries.mli  GitHub_subscriptions.ml  GitHub_types.ml  GitHub_types.mli  GitLab_mutations.ml  GitLab_mutations.mli  GitLab_queries.ml  GitLab_queries.mli  GraphQL_query.ml  GraphQL_query.mli  Helpers.ml  Utils.ml  Utils.mli  dune  schema.json
docker/: Dockerfile  Makefile  service.sh
